--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,3 +1,15 @@
-akka {
-    loglevel = "DEBUG"
+my-config {
+    akka {
+        loglevel = "DEBUG"
+    }
+
+    # configure the system-level dispatcher
+    akka.actor.default-dispatcher {
+        type = Dispatcher
+        executor = "thread-pool-executor"
+        thread-pool-executor {
+            fixed-pool-size = 8
+        }
+        throughput = 4
+    }
 }
