Finish Host Level Client APIs, August 3rd, 2022

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,6 @@
 my-config {
     akka {
-        loglevel = "DEBUG"
+        loglevel = "INFO"
     }
 
     # configure the system-level dispatcher
